# seguranca_checklist

./: .replit  README.md  app.py  main.py  models.py  pyproject.toml  replit.nix
static/: style.css
templates/: admin_usuario.html  admin_usuarios.html  base.html  index.html  login.html  register.html
